--- a/Quantumult/Rewrite/Block/Advertising.conf
+++ b/Quantumult/Rewrite/Block/Advertising.conf
@@ -33,7 +33,7 @@ hostname = -lark-frontier-hl.snssdk.com,api.21jingji.com,service.4gtv.tv,app.58.
 # > AMap - m*.amap.com
 ^https?:\/\/m\d\.amap\.com\/ws\/valueadded\/alimama\/splash_screen\/ url reject
 # > YOUKU
-^https?:\/\/[\w-.]+\.ott\.cibntv\.net\/[\w\/-]+.mp4\?sid= url reject
+#^https?:\/\/[\w-.]+\.ott\.cibntv\.net\/[\w\/-]+.mp4\?sid= url reject
 #^https?:\/\/[\w-.]+\.ott\.cibntv\.net\/[\w\/-]+.mp4\?ccode=02010101 url reject
 # ---
 # > AcFun - api-new.app.acfun.cn
